gitops/infrastructure/namespace-monitoring.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: monitoring
  labels:
    policy-enforcement: "false"
