gitops/infrastructure/argocd-httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: argocd-route
  namespace: argocd
spec:
  parentRefs:
    - name: external-gateway
      namespace: default
      sectionName: https
  hostnames:
    - argo.cralyx.com
  rules:
    - backendRefs:
        - name: argocd-server
          port: 80
