gitops/infrastructure/grafana-httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: grafana-route
  namespace: monitoring
spec:
  parentRefs:
    - name: external-gateway
      namespace: default
      sectionName: https
  hostnames:
    - dash.cralyx.com
  rules:
    - backendRefs:
        - name: kube-prometheus-stack-grafana
          port: 80
